@@ -51,7 +51,7 @@
             <li id="code"><%= link_to 'Browser', browser_path %></li>
             <% end -%>
             <li id="activity"><%= link_to 'Activity', (current_repository || logged_in? ? changesets_path : public_changesets_path) %></li>
-            <% if admin? %>
+            <% if admin? || (current_repository && repository_admin?) %>
             <li id="admin"><%= link_to 'Admin', admin_path %></li>
             <% end %>
           </ul>
