@@ -18,7 +18,7 @@
 <ul id="repos">
 <% @repositories.each do |repo| -%>
   <li class="repo" id="repo-<%= repo.id %>">
-    <%=h repo.name %>
+    <%= link_to h(repo.name), root_url(:host => repo.domain, :port => request.port) %>
     <span class="log"><%= repo.path %></span>
     <% if admin? %>
       <% if repo.sync? %>
