@@ -2,6 +2,7 @@
 
 * fix changeset/public reloading issues
 * allow configurable session options
+* allow repo admins to access /repositories
 
 * 0.9.1 (beta)
 
